# storm_gazebo_ros_magnet

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  package.xml
include/storm_gazebo_ros_magnet/: dipole_magnet.h  dipole_magnet_container.h
launch/: example.launch
src/: dipole_magnet.cc
worlds/: dipole_magnet.world
